# lemma

./: .dockerignore  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .sops.yaml  .yamllint.yml  AGENTS.md  DEVELOPMENT.md  MAINTAINERS.md  README.md  SECURITY.md  biome.json  dependency-cruiser.config.cjs  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.codex/agents/: backend-implementer.toml  ci-fixer.toml  conflict-resolver.toml  diff-summarizer.toml  docs-sync.toml  frontend-implementer.toml  git-publisher.toml  issue-planner.toml  repo-reader.toml  reviewer.toml  test-writer.toml  validator.toml
.github/: dependabot.yml  pull_request_template.md
apps/admin/: Dockerfile  (+6 more)
apps/libreoffice-worker/: DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
apps/libreoffice-worker/src/libreoffice_worker/: server.py
docs/: architecture.md  auth.md  deployment.md  domain-model.md  domain-packages-guidlines.md  frontend-guidlines.md  generated-files.md  infra.md  operations.md  project-structure.md  source-lifecycle-garbage-collection.md  testing.md  vps-deployment-runbook.md
infra/: .env.example  compose-apps.yml  compose-dev.yml  compose-keycloak.prod.yml  compose-keycloak.yml  compose-libreoffice-worker.yml  compose-observability.yml  compose-realtime.yml  keycloak-realm.json
scripts/: app-architecture-checker.mjs  check-docs.mjs  check-generated-clean.mjs  check-package-boundaries.mjs  check-package-boundaries.test.mjs  check-web-import-boundaries.cjs  check-web-import-boundaries.test.cjs  run-openapi-generator.mjs  run-with-env.mjs
(+592 files in other folders)
