[project]
name = "lemma-libreoffice-worker"
version = "0.0.0"
description = "Internal LibreOffice UNO workbook calculation worker."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lemma-libreoffice-worker = "libreoffice_worker.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/libreoffice_worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
